# DripStone

./: .gitignore  build.gradle  config.gradle  gradle.properties  settings.gradle
aop_optimize_plugin/: build.gradle
aop_trace_plugin/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
buildSrc/: build.gradle
collect/: build.gradle
collect/src/main/: AndroidManifest.xml
common/: build.gradle  proguard-rules.pro
common/src/main/: AndroidManifest.xml
compose/: build.gradle
compose/src/main/: AndroidManifest.xml
core/: build.gradle  proguard-rules.pro
core/src/main/: AndroidManifest.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
keystore/: drip.jks
network/: build.gradle  proguard-rules.pro
network/src/main/: AndroidManifest.xml
optimize/: build.gradle
optimize-crash/: build.gradle
optimize-crash/debug/: output.json
optimize-crash/src/main/: AndroidManifest.xml
optimize-crash/src/main/cpp/: CMakeLists.txt  bugly.cpp
optimize-crash/src/main/cpp/airbag/: CMakeLists.txt  NativeAirbag.cpp  NativeAirbag.h
optimize-crash/src/main/cpp/breakpad/: CMakeLists.txt
optimize/src/main/: AndroidManifest.xml
platform/: build.gradle  proguard-rules.pro
platform/src/main/: AndroidManifest.xml
pluginTest/: build.gradle
remoteserver/: build.gradle
security/: build.gradle
security/result/: apk-signed.apk  apk-unsigned.apk
skin/: build.gradle
study/: build.gradle
ui/: build.gradle
usercenter/: build.gradle
webview/: build.gradle
(+876 files in other folders)
